[gd_scene load_steps=10 format=4 uid="uid://d3cpr3qecdtqv"]

[ext_resource type="Script" path="res://scripts/levels/boss_area.gd" id="1_lbe6e"]
[ext_resource type="AudioStream" uid="uid://dfnlx8wvputuy" path="res://assets/music/mus_boss.mp3" id="2_c21o5"]
[ext_resource type="Texture2D" uid="uid://c3ruqeec58wyr" path="res://assets/sprites/terrains/bg_mushroom_back.png" id="3_ojk4e"]
[ext_resource type="Texture2D" uid="uid://dqq0un7sgshcb" path="res://assets/sprites/terrains/bg_mushroom_front.png" id="4_kpy0s"]
[ext_resource type="PackedScene" uid="uid://bggby2h6prvx3" path="res://scenes/terrains/ground.tscn" id="5_qek81"]
[ext_resource type="PackedScene" uid="uid://ixnghv7tms0i" path="res://scenes/platforms/platform.tscn" id="6_h1fn3"]
[ext_resource type="PackedScene" uid="uid://dwitea1wpbdjp" path="res://scenes/chars/player.tscn" id="7_cms48"]
[ext_resource type="PackedScene" uid="uid://bvd0y2way7av1" path="res://scenes/chars/boss_mirror.tscn" id="8_gf3ln"]
[ext_resource type="PackedScene" uid="uid://cvvewevudo2kf" path="res://scenes/other/hud.tscn" id="8_ry3vd"]

[node name="BossArea" type="Node2D"]
script = ExtResource("1_lbe6e")

[node name="Music" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_c21o5")
volume_db = 4.0
bus = &"Music"

[node name="Background" type="TextureRect" parent="."]
offset_left = -480.0
offset_top = -491.0
offset_right = 480.0
offset_bottom = 48.0
texture = ExtResource("3_ojk4e")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Midground" type="TextureRect" parent="."]
offset_left = -480.0
offset_top = -177.0
offset_right = 480.0
offset_bottom = 101.0
texture = ExtResource("4_kpy0s")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Ground" parent="." instance=ExtResource("5_qek81")]
tile_map_data = PackedByteArray("AAD9/wIAAAACAAQAAAD+/wIAAAACAAQAAAD//wIAAAACAAQAAAAAAAIAAAACAAQAAAABAAIAAAACAAQAAAACAAIAAAACAAQAAAADAAIAAAACAAQAAAAEAAIAAAACAAQAAAAFAAIAAAACAAQAAAAFAAMAAAACAAUAAAAEAAMAAAACAAUAAAADAAMAAAACAAUAAAACAAMAAAACAAUAAAABAAMAAAACAAUAAAAAAAMAAAACAAUAAAD//wMAAAACAAUAAAD+/wMAAAACAAUAAAD9/wMAAAACAAUAAAD8/wMAAAACAAUAAAD7/wMAAAACAAUAAAD6/wMAAAACAAUAAAD7/wIAAAACAAQAAAD8/wIAAAACAAQAAAD6/wIAAAACAAQAAAD5/wIAAAACAAQAAAD4/wIAAAACAAQAAAD4/wMAAAACAAUAAAD5/wMAAAACAAUAAAD4/wQAAAACAAUAAAD5/wQAAAACAAUAAAD6/wQAAAACAAUAAAD7/wQAAAACAAUAAAD8/wQAAAACAAUAAAD9/wQAAAACAAUAAAD+/wQAAAACAAUAAAD//wQAAAACAAUAAAAAAAQAAAACAAUAAAABAAQAAAACAAUAAAACAAQAAAACAAUAAAADAAUAAAACAAUAAAAEAAUAAAACAAUAAAAFAAUAAAACAAUAAAAFAAQAAAACAAUAAAAEAAQAAAACAAUAAAADAAQAAAACAAUAAAACAAUAAAACAAUAAAABAAUAAAACAAUAAAAAAAUAAAACAAUAAAD//wUAAAACAAUAAAD+/wUAAAACAAUAAAD9/wUAAAACAAUAAAD8/wUAAAACAAUAAAD7/wUAAAACAAUAAAD6/wUAAAACAAUAAAD5/wUAAAACAAUAAAD4/wUAAAACAAUAAAAOAAcAAAACAAYAAAAOAAYAAAACAAUAAAAOAAUAAAACAAUAAAAOAAQAAAACAAUAAAAOAAMAAAACAAUAAAAOAAIAAAACAAQAAAANAAcAAAACAAYAAAANAAYAAAACAAUAAAANAAUAAAACAAUAAAANAAQAAAACAAUAAAANAAMAAAACAAUAAAANAAIAAAACAAQAAAAMAAcAAAACAAYAAAAMAAYAAAACAAUAAAAMAAUAAAACAAUAAAAMAAQAAAACAAUAAAAMAAMAAAACAAUAAAAMAAIAAAACAAQAAAALAAcAAAACAAYAAAALAAYAAAACAAUAAAALAAUAAAACAAUAAAALAAQAAAACAAUAAAALAAMAAAACAAUAAAALAAIAAAACAAQAAAAKAAcAAAACAAYAAAAKAAYAAAACAAUAAAAKAAUAAAACAAUAAAAKAAQAAAACAAUAAAAKAAMAAAACAAUAAAAKAAIAAAACAAQAAAAJAAcAAAACAAYAAAAJAAYAAAACAAUAAAAJAAUAAAACAAUAAAAJAAQAAAACAAUAAAAJAAMAAAACAAUAAAAJAAIAAAACAAQAAAAIAAcAAAACAAYAAAAIAAYAAAACAAUAAAAIAAUAAAACAAUAAAAIAAQAAAACAAUAAAAIAAMAAAACAAUAAAAIAAIAAAACAAQAAAAHAAcAAAACAAYAAAAHAAYAAAACAAUAAAAHAAUAAAACAAUAAAAHAAQAAAACAAUAAAAHAAMAAAACAAUAAAAHAAIAAAACAAQAAAAGAAcAAAACAAYAAAAGAAYAAAACAAUAAAAGAAUAAAACAAUAAAAGAAQAAAACAAUAAAAGAAMAAAACAAUAAAAGAAIAAAACAAQAAAAFAAcAAAACAAYAAAAFAAYAAAACAAUAAAAEAAcAAAACAAYAAAAEAAYAAAACAAUAAAADAAcAAAACAAYAAAADAAYAAAACAAUAAAACAAcAAAACAAYAAAACAAYAAAACAAUAAAABAAcAAAACAAYAAAABAAYAAAACAAUAAAAAAAcAAAACAAYAAAAAAAYAAAACAAUAAAD//wcAAAACAAYAAAD//wYAAAACAAUAAAD+/wcAAAACAAYAAAD+/wYAAAACAAUAAAD9/wcAAAACAAYAAAD9/wYAAAACAAUAAAD8/wcAAAACAAYAAAD8/wYAAAACAAUAAAD7/wcAAAACAAYAAAD7/wYAAAACAAUAAAD6/wcAAAACAAYAAAD6/wYAAAACAAUAAAD5/wcAAAACAAYAAAD5/wYAAAACAAUAAAD4/wcAAAACAAYAAAD4/wYAAAACAAUAAAD3/wcAAAACAAYAAAD3/wYAAAACAAUAAAD3/wUAAAACAAUAAAD3/wQAAAACAAUAAAD3/wMAAAACAAUAAAD3/wIAAAACAAQAAAD2/wcAAAACAAYAAAD2/wYAAAACAAUAAAD2/wUAAAACAAUAAAD2/wQAAAACAAUAAAD2/wMAAAACAAUAAAD2/wIAAAACAAQAAAD1/wcAAAACAAYAAAD1/wYAAAACAAUAAAD1/wUAAAACAAUAAAD1/wQAAAACAAUAAAD1/wMAAAACAAUAAAD1/wIAAAACAAQAAAD0/wcAAAACAAYAAAD0/wYAAAACAAUAAAD0/wUAAAACAAUAAAD0/wQAAAACAAUAAAD0/wMAAAACAAUAAAD0/wIAAAACAAQAAADz/wcAAAACAAYAAADz/wYAAAACAAUAAADz/wUAAAACAAUAAADz/wQAAAACAAUAAADz/wMAAAACAAUAAADz/wIAAAACAAQAAADy/wcAAAACAAYAAADy/wYAAAACAAUAAADy/wUAAAACAAUAAADy/wQAAAACAAUAAADy/wMAAAACAAUAAADy/wIAAAACAAQAAADx/wcAAAACAAYAAADx/wYAAAACAAUAAADx/wUAAAACAAUAAADx/wQAAAACAAUAAADx/wMAAAACAAUAAADx/wIAAAACAAQAAADw/wcAAAACAAYAAADw/wYAAAACAAUAAADw/wUAAAACAAUAAADw/wQAAAACAAUAAADw/wMAAAACAAUAAADw/wIAAAACAAQAAADv/wcAAAACAAYAAADv/wYAAAACAAUAAADv/wUAAAACAAUAAADv/wQAAAACAAUAAADv/wMAAAACAAUAAADv/wIAAAACAAQAAAAVAAcAAAACAAYAAAAVAAYAAAACAAUAAAAVAAUAAAACAAUAAAAVAAQAAAACAAUAAAAVAAMAAAACAAUAAAAVAAIAAAACAAQAAAAUAAcAAAACAAYAAAAUAAYAAAACAAUAAAAUAAUAAAACAAUAAAAUAAQAAAACAAUAAAAUAAMAAAACAAUAAAAUAAIAAAACAAQAAAATAAcAAAACAAYAAAATAAYAAAACAAUAAAATAAUAAAACAAUAAAATAAQAAAACAAUAAAATAAMAAAACAAUAAAATAAIAAAACAAQAAAASAAcAAAACAAYAAAASAAYAAAACAAUAAAASAAUAAAACAAUAAAASAAQAAAACAAUAAAASAAMAAAACAAUAAAASAAIAAAACAAQAAAARAAcAAAACAAYAAAARAAYAAAACAAUAAAARAAUAAAACAAUAAAARAAQAAAACAAUAAAARAAMAAAACAAUAAAARAAIAAAACAAQAAAAQAAcAAAACAAYAAAAQAAYAAAACAAUAAAAQAAUAAAACAAUAAAAQAAQAAAACAAUAAAAQAAMAAAACAAUAAAAQAAIAAAACAAQAAAAPAAcAAAACAAYAAAAPAAYAAAACAAUAAAAPAAUAAAACAAUAAAAPAAQAAAACAAUAAAAPAAMAAAACAAUAAAAPAAIAAAACAAQAAADu/wcAAAACAAYAAADu/wYAAAACAAUAAADu/wUAAAACAAUAAADu/wQAAAACAAUAAADu/wMAAAACAAUAAADu/wIAAAACAAQAAADt/wcAAAACAAYAAADt/wYAAAACAAUAAADt/wUAAAACAAUAAADt/wQAAAACAAUAAADt/wMAAAACAAUAAADt/wIAAAACAAQAAADs/wcAAAACAAYAAADs/wYAAAACAAUAAADs/wUAAAACAAUAAADs/wQAAAACAAUAAADs/wMAAAACAAUAAADs/wIAAAACAAQAAADr/wcAAAACAAYAAADr/wYAAAACAAUAAADr/wUAAAACAAUAAADr/wQAAAACAAUAAADr/wMAAAACAAUAAADr/wIAAAACAAQAAADq/wcAAAACAAYAAADq/wYAAAACAAUAAADq/wUAAAACAAUAAADq/wQAAAACAAUAAADq/wMAAAACAAUAAADq/wIAAAACAAQAAADp/wcAAAACAAYAAADp/wYAAAACAAUAAADp/wUAAAACAAUAAADp/wQAAAACAAUAAADp/wMAAAACAAUAAADp/wIAAAACAAQAAADo/wcAAAACAAYAAADo/wYAAAACAAUAAADo/wUAAAACAAUAAADo/wQAAAACAAUAAADo/wMAAAACAAUAAADo/wIAAAACAAQAAADn/wcAAAACAAYAAADn/wYAAAACAAUAAADn/wUAAAACAAUAAADn/wQAAAACAAUAAADn/wMAAAACAAUAAADn/wIAAAACAAQAAAAYAAcAAAACAAYAAAAYAAYAAAACAAUAAAAYAAUAAAACAAUAAAAYAAQAAAACAAUAAAAYAAMAAAACAAUAAAAYAAIAAAACAAQAAAAXAAcAAAACAAYAAAAXAAYAAAACAAUAAAAXAAUAAAACAAUAAAAXAAQAAAACAAUAAAAXAAMAAAACAAUAAAAXAAIAAAACAAQAAAAWAAcAAAACAAYAAAAWAAYAAAACAAUAAAAWAAUAAAACAAUAAAAWAAQAAAACAAUAAAAWAAMAAAACAAUAAAAWAAIAAAACAAQAAADm/wEAAAADAAUAAADm/wAAAAADAAUAAADm////AAADAAUAAADm//7/AAADAAUAAADm//3/AAADAAUAAADm//z/AAADAAUAAADm//v/AAADAAUAAADm//r/AAADAAUAAADm//n/AAADAAUAAADm//j/AAADAAUAAADm//f/AAADAAUAAADm//b/AAADAAUAAADm//X/AAADAAUAAADm//T/AAADAAUAAADm//P/AAADAAUAAADm//L/AAADAAUAAADm//H/AAADAAUAAADm//D/AAADAAUAAADm/+//AAADAAUAAADm/+7/AAADAAUAAADl/wEAAAACAAUAAADl/wAAAAACAAUAAADl////AAACAAUAAADl//7/AAACAAUAAADl//3/AAACAAUAAADl//z/AAACAAUAAADl//v/AAACAAUAAADl//r/AAACAAUAAADl//n/AAACAAUAAADl//j/AAACAAUAAADl//f/AAACAAUAAADl//b/AAACAAUAAADl//X/AAACAAUAAADl//T/AAACAAUAAADl//P/AAACAAUAAADl//L/AAACAAUAAADl//H/AAACAAUAAADl//D/AAACAAUAAADl/+//AAACAAUAAADl/+7/AAACAAUAAADk/wEAAAACAAUAAADk/wAAAAACAAUAAADk////AAACAAUAAADk//7/AAACAAUAAADk//3/AAACAAUAAADk//z/AAACAAUAAADk//v/AAACAAUAAADk//r/AAACAAUAAADk//n/AAACAAUAAADk//j/AAACAAUAAADk//f/AAACAAUAAADk//b/AAACAAUAAADk//X/AAACAAUAAADk//T/AAACAAUAAADk//P/AAACAAUAAADk//L/AAACAAUAAADk//H/AAACAAUAAADk//D/AAACAAUAAADk/+//AAACAAUAAADk/+7/AAACAAUAAADj/wEAAAACAAUAAADj/wAAAAACAAUAAADj////AAACAAUAAADj//7/AAACAAUAAADj//3/AAACAAUAAADj//z/AAACAAUAAADj//v/AAACAAUAAADj//r/AAACAAUAAADj//n/AAACAAUAAADj//j/AAACAAUAAADj//f/AAACAAUAAADj//b/AAACAAUAAADj//X/AAACAAUAAADj//T/AAACAAUAAADj//P/AAACAAUAAADj//L/AAACAAUAAADj//H/AAACAAUAAADj//D/AAACAAUAAADj/+//AAACAAUAAADj/+7/AAACAAUAAADi/wEAAAABAAUAAADi/wAAAAABAAUAAADi////AAABAAUAAADi//7/AAABAAUAAADi//3/AAABAAUAAADi//z/AAABAAUAAADi//v/AAABAAUAAADi//r/AAABAAUAAADi//n/AAABAAUAAADi//j/AAABAAUAAADi//f/AAABAAUAAADi//b/AAABAAUAAADi//X/AAABAAUAAADi//T/AAABAAUAAADi//P/AAABAAUAAADi//L/AAABAAUAAADi//H/AAABAAUAAADi//D/AAABAAUAAADi/+//AAABAAUAAADi/+7/AAABAAUAAAAdAAEAAAADAAUAAAAdAAAAAAADAAUAAAAdAP//AAADAAUAAAAdAP7/AAADAAUAAAAdAP3/AAADAAUAAAAdAPz/AAADAAUAAAAdAPv/AAADAAUAAAAdAPr/AAADAAUAAAAdAPn/AAADAAUAAAAdAPj/AAADAAUAAAAdAPf/AAADAAUAAAAdAPb/AAADAAUAAAAdAPX/AAADAAUAAAAdAPT/AAADAAUAAAAdAPP/AAADAAUAAAAdAPL/AAADAAUAAAAdAPH/AAADAAUAAAAdAPD/AAADAAUAAAAdAO//AAADAAUAAAAcAAEAAAACAAUAAAAcAAAAAAACAAUAAAAcAP//AAACAAUAAAAcAP7/AAACAAUAAAAcAP3/AAACAAUAAAAcAPz/AAACAAUAAAAcAPv/AAACAAUAAAAcAPr/AAACAAUAAAAcAPn/AAACAAUAAAAcAPj/AAACAAUAAAAcAPf/AAACAAUAAAAcAPb/AAACAAUAAAAcAPX/AAACAAUAAAAcAPT/AAACAAUAAAAcAPP/AAACAAUAAAAcAPL/AAACAAUAAAAcAPH/AAACAAUAAAAcAPD/AAACAAUAAAAcAO//AAACAAUAAAAbAAEAAAACAAUAAAAbAAAAAAACAAUAAAAbAP//AAACAAUAAAAbAP7/AAACAAUAAAAbAP3/AAACAAUAAAAbAPz/AAACAAUAAAAbAPv/AAACAAUAAAAbAPr/AAACAAUAAAAbAPn/AAACAAUAAAAbAPj/AAACAAUAAAAbAPf/AAACAAUAAAAbAPb/AAACAAUAAAAbAPX/AAACAAUAAAAbAPT/AAACAAUAAAAbAPP/AAACAAUAAAAbAPL/AAACAAUAAAAbAPH/AAACAAUAAAAbAPD/AAACAAUAAAAbAO//AAACAAUAAAAaAAEAAAACAAUAAAAaAAAAAAACAAUAAAAaAP//AAACAAUAAAAaAP7/AAACAAUAAAAaAP3/AAACAAUAAAAaAPz/AAACAAUAAAAaAPv/AAACAAUAAAAaAPr/AAACAAUAAAAaAPn/AAACAAUAAAAaAPj/AAACAAUAAAAaAPf/AAACAAUAAAAaAPb/AAACAAUAAAAaAPX/AAACAAUAAAAaAPT/AAACAAUAAAAaAPP/AAACAAUAAAAaAPL/AAACAAUAAAAaAPH/AAACAAUAAAAaAPD/AAACAAUAAAAaAO//AAACAAUAAAAZAAEAAAABAAUAAAAZAAAAAAABAAUAAAAZAP//AAABAAUAAAAZAP7/AAABAAUAAAAZAP3/AAABAAUAAAAZAPz/AAABAAUAAAAZAPv/AAABAAUAAAAZAPr/AAABAAUAAAAZAPn/AAABAAUAAAAZAPj/AAABAAUAAAAZAPf/AAABAAUAAAAZAPb/AAABAAUAAAAZAPX/AAABAAUAAAAZAPT/AAABAAUAAAAZAPP/AAABAAUAAAAZAPL/AAABAAUAAAAZAPH/AAABAAUAAAAZAPD/AAABAAUAAAAZAO//AAABAAUAAAAdAAcAAAADAAYAAAAdAAYAAAADAAUAAAAdAAUAAAADAAUAAAAdAAQAAAADAAUAAAAdAAMAAAADAAUAAAAdAAIAAAADAAUAAAAcAAcAAAACAAYAAAAcAAYAAAACAAUAAAAcAAUAAAACAAUAAAAcAAQAAAACAAUAAAAcAAMAAAACAAUAAAAcAAIAAAACAAUAAAAbAAcAAAACAAYAAAAbAAYAAAACAAUAAAAbAAUAAAACAAUAAAAbAAQAAAACAAUAAAAbAAMAAAACAAUAAAAbAAIAAAACAAUAAAAaAAcAAAACAAYAAAAaAAYAAAACAAUAAAAaAAUAAAACAAUAAAAaAAQAAAACAAUAAAAaAAMAAAACAAUAAAAaAAIAAAACAAUAAAAZAAcAAAACAAYAAAAZAAYAAAACAAUAAAAZAAUAAAACAAUAAAAZAAQAAAACAAUAAAAZAAMAAAACAAUAAAAZAAIAAAAFAAUAAADm/wcAAAACAAYAAADm/wYAAAACAAUAAADm/wUAAAACAAUAAADm/wQAAAACAAUAAADm/wMAAAACAAUAAADm/wIAAAAEAAUAAADl/wcAAAACAAYAAADl/wYAAAACAAUAAADl/wUAAAACAAUAAADl/wQAAAACAAUAAADl/wMAAAACAAUAAADl/wIAAAACAAUAAADk/wcAAAACAAYAAADk/wYAAAACAAUAAADk/wUAAAACAAUAAADk/wQAAAACAAUAAADk/wMAAAACAAUAAADk/wIAAAACAAUAAADj/wcAAAACAAYAAADj/wYAAAACAAUAAADj/wUAAAACAAUAAADj/wQAAAACAAUAAADj/wMAAAACAAUAAADj/wIAAAACAAUAAADi/wcAAAABAAYAAADi/wYAAAABAAUAAADi/wUAAAABAAUAAADi/wQAAAABAAUAAADi/wMAAAABAAUAAADi/wIAAAABAAUAAADm/+3/AAADAAUAAADm/+z/AAADAAUAAADm/+v/AAADAAUAAADm/+r/AAADAAUAAADm/+n/AAADAAUAAADm/+j/AAADAAUAAADm/+f/AAADAAUAAADm/+b/AAADAAUAAADm/+X/AAADAAUAAADm/+T/AAADAAUAAADm/+P/AAADAAUAAADm/+L/AAADAAUAAADm/+H/AAADAAUAAADm/+D/AAADAAUAAADm/9//AAADAAUAAADm/97/AAAEAAQAAADm/93/AAACAAUAAADm/9z/AAACAAUAAADm/9v/AAACAAUAAADm/9r/AAACAAQAAADl/+3/AAACAAUAAADl/+z/AAACAAUAAADl/+v/AAACAAUAAADl/+r/AAACAAUAAADl/+n/AAACAAUAAADl/+j/AAACAAUAAADl/+f/AAACAAUAAADl/+b/AAACAAUAAADl/+X/AAACAAUAAADl/+T/AAACAAUAAADl/+P/AAACAAUAAADl/+L/AAACAAUAAADl/+H/AAACAAUAAADl/+D/AAACAAUAAADl/9//AAACAAUAAADl/97/AAACAAUAAADl/93/AAACAAUAAADl/9z/AAACAAUAAADl/9v/AAACAAUAAADl/9r/AAACAAQAAADk/+3/AAACAAUAAADk/+z/AAACAAUAAADk/+v/AAACAAUAAADk/+r/AAACAAUAAADk/+n/AAACAAUAAADk/+j/AAACAAUAAADk/+f/AAACAAUAAADk/+b/AAACAAUAAADk/+X/AAACAAUAAADk/+T/AAACAAUAAADk/+P/AAACAAUAAADk/+L/AAACAAUAAADk/+H/AAACAAUAAADk/+D/AAACAAUAAADk/9//AAACAAUAAADk/97/AAACAAUAAADk/93/AAACAAUAAADk/9z/AAACAAUAAADk/9v/AAACAAUAAADk/9r/AAACAAQAAADj/+3/AAACAAUAAADj/+z/AAACAAUAAADj/+v/AAACAAUAAADj/+r/AAACAAUAAADj/+n/AAACAAUAAADj/+j/AAACAAUAAADj/+f/AAACAAUAAADj/+b/AAACAAUAAADj/+X/AAACAAUAAADj/+T/AAACAAUAAADj/+P/AAACAAUAAADj/+L/AAACAAUAAADj/+H/AAACAAUAAADj/+D/AAACAAUAAADj/9//AAACAAUAAADj/97/AAACAAUAAADj/93/AAACAAUAAADj/9z/AAACAAUAAADj/9v/AAACAAUAAADj/9r/AAACAAQAAADi/+3/AAABAAUAAADi/+z/AAABAAUAAADi/+v/AAABAAUAAADi/+r/AAABAAUAAADi/+n/AAABAAUAAADi/+j/AAABAAUAAADi/+f/AAABAAUAAADi/+b/AAABAAUAAADi/+X/AAABAAUAAADi/+T/AAABAAUAAADi/+P/AAABAAUAAADi/+L/AAABAAUAAADi/+H/AAABAAUAAADi/+D/AAABAAUAAADi/9//AAABAAUAAADi/97/AAABAAUAAADi/93/AAABAAUAAADi/9z/AAABAAUAAADi/9v/AAABAAUAAADi/9r/AAABAAQAAAAXAN3/AAACAAUAAAAXANz/AAACAAUAAAAXANv/AAACAAUAAAAXANr/AAACAAQAAAAWAN3/AAACAAUAAAAWANz/AAACAAUAAAAWANv/AAACAAUAAAAWANr/AAACAAQAAAAVAN3/AAACAAUAAAAVANz/AAACAAUAAAAVANv/AAACAAUAAAAVANr/AAACAAQAAAAUAN3/AAACAAUAAAAUANz/AAACAAUAAAAUANv/AAACAAUAAAAUANr/AAACAAQAAAATAN3/AAACAAUAAAATANz/AAACAAUAAAATANv/AAACAAUAAAATANr/AAACAAQAAAASAN3/AAACAAUAAAASANz/AAACAAUAAAASANv/AAACAAUAAAASANr/AAACAAQAAAARAN3/AAACAAUAAAARANz/AAACAAUAAAARANv/AAACAAUAAAARANr/AAACAAQAAAAQAN3/AAACAAUAAAAQANz/AAACAAUAAAAQANv/AAACAAUAAAAQANr/AAACAAQAAAAPAN3/AAACAAUAAAAPANz/AAACAAUAAAAPANv/AAACAAUAAAAPANr/AAACAAQAAAAOAN3/AAACAAUAAAAOANz/AAACAAUAAAAOANv/AAACAAUAAAAOANr/AAACAAQAAAANAN3/AAACAAUAAAANANz/AAACAAUAAAANANv/AAACAAUAAAANANr/AAACAAQAAAAMAN3/AAACAAUAAAAMANz/AAACAAUAAAAMANv/AAACAAUAAAAMANr/AAACAAQAAAALAN3/AAACAAUAAAALANz/AAACAAUAAAALANv/AAACAAUAAAALANr/AAACAAQAAAAKAN3/AAACAAUAAAAKANz/AAACAAUAAAAKANv/AAACAAUAAAAKANr/AAACAAQAAAAJAN3/AAACAAUAAAAJANz/AAACAAUAAAAJANv/AAACAAUAAAAJANr/AAACAAQAAAAIAN3/AAACAAUAAAAIANz/AAACAAUAAAAIANv/AAACAAUAAAAIANr/AAACAAQAAAAHAN3/AAACAAUAAAAHANz/AAACAAUAAAAHANv/AAACAAUAAAAHANr/AAACAAQAAAAGAN3/AAACAAUAAAAGANz/AAACAAUAAAAGANv/AAACAAUAAAAGANr/AAACAAQAAAAFAN3/AAACAAUAAAAFANz/AAACAAUAAAAFANv/AAACAAUAAAAFANr/AAACAAQAAAAEAN3/AAACAAUAAAAEANz/AAACAAUAAAAEANv/AAACAAUAAAAEANr/AAACAAQAAAADAN3/AAACAAUAAAADANz/AAACAAUAAAADANv/AAACAAUAAAADANr/AAACAAQAAAACAN3/AAACAAUAAAACANz/AAACAAUAAAACANv/AAACAAUAAAACANr/AAACAAQAAAABAN3/AAACAAUAAAABANz/AAACAAUAAAABANv/AAACAAUAAAABANr/AAACAAQAAAAAAN3/AAACAAUAAAAAANz/AAACAAUAAAAAANv/AAACAAUAAAAAANr/AAACAAQAAAD//93/AAACAAUAAAD//9z/AAACAAUAAAD//9v/AAACAAUAAAD//9r/AAACAAQAAAD+/93/AAACAAUAAAD+/9z/AAACAAUAAAD+/9v/AAACAAUAAAD+/9r/AAACAAQAAAD9/93/AAACAAUAAAD9/9z/AAACAAUAAAD9/9v/AAACAAUAAAD9/9r/AAACAAQAAAD8/93/AAACAAUAAAD8/9z/AAACAAUAAAD8/9v/AAACAAUAAAD8/9r/AAACAAQAAAD7/93/AAACAAUAAAD7/9z/AAACAAUAAAD7/9v/AAACAAUAAAD7/9r/AAACAAQAAAD6/93/AAACAAUAAAD6/9z/AAACAAUAAAD6/9v/AAACAAUAAAD6/9r/AAACAAQAAAD5/93/AAACAAUAAAD5/9z/AAACAAUAAAD5/9v/AAACAAUAAAD5/9r/AAACAAQAAAD4/93/AAACAAUAAAD4/9z/AAACAAUAAAD4/9v/AAACAAUAAAD4/9r/AAACAAQAAAD3/93/AAACAAUAAAD3/9z/AAACAAUAAAD3/9v/AAACAAUAAAD3/9r/AAACAAQAAAD2/93/AAACAAUAAAD2/9z/AAACAAUAAAD2/9v/AAACAAUAAAD2/9r/AAACAAQAAAD1/93/AAACAAUAAAD1/9z/AAACAAUAAAD1/9v/AAACAAUAAAD1/9r/AAACAAQAAAD0/93/AAACAAUAAAD0/9z/AAACAAUAAAD0/9v/AAACAAUAAAD0/9r/AAACAAQAAADz/93/AAACAAUAAADz/9z/AAACAAUAAADz/9v/AAACAAUAAADz/9r/AAACAAQAAADy/93/AAACAAUAAADy/9z/AAACAAUAAADy/9v/AAACAAUAAADy/9r/AAACAAQAAADx/93/AAACAAUAAADx/9z/AAACAAUAAADx/9v/AAACAAUAAADx/9r/AAACAAQAAADw/93/AAACAAUAAADw/9z/AAACAAUAAADw/9v/AAACAAUAAADw/9r/AAACAAQAAADv/93/AAACAAUAAADv/9z/AAACAAUAAADv/9v/AAACAAUAAADv/9r/AAACAAQAAADu/93/AAACAAUAAADu/9z/AAACAAUAAADu/9v/AAACAAUAAADu/9r/AAACAAQAAADt/93/AAACAAUAAADt/9z/AAACAAUAAADt/9v/AAACAAUAAADt/9r/AAACAAQAAADs/93/AAACAAUAAADs/9z/AAACAAUAAADs/9v/AAACAAUAAADs/9r/AAACAAQAAADr/93/AAACAAUAAADr/9z/AAACAAUAAADr/9v/AAACAAUAAADr/9r/AAACAAQAAADq/93/AAACAAUAAADq/9z/AAACAAUAAADq/9v/AAACAAUAAADq/9r/AAACAAQAAADp/93/AAACAAUAAADp/9z/AAACAAUAAADp/9v/AAACAAUAAADp/9r/AAACAAQAAADo/93/AAACAAUAAADo/9z/AAACAAUAAADo/9v/AAACAAUAAADo/9r/AAACAAQAAADn/93/AAACAAUAAADn/9z/AAACAAUAAADn/9v/AAACAAUAAADn/9r/AAACAAQAAAAdAO7/AAADAAUAAAAdAO3/AAADAAUAAAAdAOz/AAADAAUAAAAdAOv/AAADAAUAAAAdAOr/AAADAAUAAAAdAOn/AAADAAUAAAAdAOj/AAADAAUAAAAdAOf/AAADAAUAAAAdAOb/AAADAAUAAAAdAOX/AAADAAUAAAAdAOT/AAADAAUAAAAdAOP/AAADAAUAAAAdAOL/AAADAAUAAAAdAOH/AAADAAUAAAAdAOD/AAADAAUAAAAdAN//AAADAAUAAAAdAN7/AAADAAUAAAAdAN3/AAADAAUAAAAdANz/AAADAAUAAAAdANv/AAADAAUAAAAdANr/AAADAAQAAAAcAO7/AAACAAUAAAAcAO3/AAACAAUAAAAcAOz/AAACAAUAAAAcAOv/AAACAAUAAAAcAOr/AAACAAUAAAAcAOn/AAACAAUAAAAcAOj/AAACAAUAAAAcAOf/AAACAAUAAAAcAOb/AAACAAUAAAAcAOX/AAACAAUAAAAcAOT/AAACAAUAAAAcAOP/AAACAAUAAAAcAOL/AAACAAUAAAAcAOH/AAACAAUAAAAcAOD/AAACAAUAAAAcAN//AAACAAUAAAAcAN7/AAACAAUAAAAcAN3/AAACAAUAAAAcANz/AAACAAUAAAAcANv/AAACAAUAAAAcANr/AAACAAQAAAAbAO7/AAACAAUAAAAbAO3/AAACAAUAAAAbAOz/AAACAAUAAAAbAOv/AAACAAUAAAAbAOr/AAACAAUAAAAbAOn/AAACAAUAAAAbAOj/AAACAAUAAAAbAOf/AAACAAUAAAAbAOb/AAACAAUAAAAbAOX/AAACAAUAAAAbAOT/AAACAAUAAAAbAOP/AAACAAUAAAAbAOL/AAACAAUAAAAbAOH/AAACAAUAAAAbAOD/AAACAAUAAAAbAN//AAACAAUAAAAbAN7/AAACAAUAAAAbAN3/AAACAAUAAAAbANz/AAACAAUAAAAbANv/AAACAAUAAAAbANr/AAACAAQAAAAaAO7/AAACAAUAAAAaAO3/AAACAAUAAAAaAOz/AAACAAUAAAAaAOv/AAACAAUAAAAaAOr/AAACAAUAAAAaAOn/AAACAAUAAAAaAOj/AAACAAUAAAAaAOf/AAACAAUAAAAaAOb/AAACAAUAAAAaAOX/AAACAAUAAAAaAOT/AAACAAUAAAAaAOP/AAACAAUAAAAaAOL/AAACAAUAAAAaAOH/AAACAAUAAAAaAOD/AAACAAUAAAAaAN//AAACAAUAAAAaAN7/AAACAAUAAAAaAN3/AAACAAUAAAAaANz/AAACAAUAAAAaANv/AAACAAUAAAAaANr/AAACAAQAAAAZAO7/AAABAAUAAAAZAO3/AAABAAUAAAAZAOz/AAABAAUAAAAZAOv/AAABAAUAAAAZAOr/AAABAAUAAAAZAOn/AAABAAUAAAAZAOj/AAABAAUAAAAZAOf/AAABAAUAAAAZAOb/AAABAAUAAAAZAOX/AAABAAUAAAAZAOT/AAABAAUAAAAZAOP/AAABAAUAAAAZAOL/AAABAAUAAAAZAOH/AAABAAUAAAAZAOD/AAABAAUAAAAZAN//AAABAAUAAAAZAN7/AAAFAAQAAAAZAN3/AAACAAUAAAAZANz/AAACAAUAAAAZANv/AAACAAUAAAAZANr/AAACAAQAAAAYAN3/AAACAAUAAAAYANz/AAACAAUAAAAYANv/AAACAAUAAAAYANr/AAACAAQAAAAYAN7/AAACAAYAAAAXAN7/AAACAAYAAAAWAN7/AAACAAYAAAAVAN7/AAACAAYAAAAUAN7/AAACAAYAAAATAN7/AAACAAYAAAASAN7/AAACAAYAAAARAN7/AAACAAYAAAAQAN7/AAACAAYAAAAPAN7/AAACAAYAAAAOAN7/AAACAAYAAAANAN7/AAACAAYAAAAMAN7/AAACAAYAAAALAN7/AAACAAYAAAAKAN7/AAACAAYAAAAJAN7/AAACAAYAAAAIAN7/AAACAAYAAAAHAN7/AAACAAYAAAAGAN7/AAACAAYAAAAFAN7/AAACAAYAAAAEAN7/AAACAAYAAAADAN7/AAACAAYAAAACAN7/AAACAAYAAAABAN7/AAACAAYAAAAAAN7/AAACAAYAAAD//97/AAACAAYAAAD+/97/AAACAAYAAAD9/97/AAACAAYAAAD8/97/AAACAAYAAAD7/97/AAACAAYAAAD6/97/AAACAAYAAAD5/97/AAACAAYAAAD4/97/AAACAAYAAAD3/97/AAACAAYAAAD2/97/AAACAAYAAAD1/97/AAACAAYAAAD0/97/AAACAAYAAADz/97/AAACAAYAAADy/97/AAACAAYAAADx/97/AAACAAYAAADw/97/AAACAAYAAADv/97/AAACAAYAAADu/97/AAACAAYAAADt/97/AAACAAYAAADs/97/AAACAAYAAADr/97/AAACAAYAAADq/97/AAACAAYAAADp/97/AAACAAYAAADo/97/AAACAAYAAADn/97/AAACAAYAAAA=")

[node name="Platforms" type="Node" parent="."]

[node name="platform" parent="Platforms" instance=ExtResource("6_h1fn3")]
position = Vector2(-110, -20)

[node name="platform2" parent="Platforms" instance=ExtResource("6_h1fn3")]
position = Vector2(110, -20)

[node name="BossMirror" parent="." instance=ExtResource("8_gf3ln")]
z_index = 1
position = Vector2(40, 16)

[node name="Player" parent="." instance=ExtResource("7_cms48")]
unique_name_in_owner = true
z_index = 1
position = Vector2(-147, 16)

[node name="Camera2D" type="Camera2D" parent="Player"]
limit_left = -216
limit_top = -480
limit_right = 216
limit_bottom = 48

[node name="HUD" parent="." instance=ExtResource("8_ry3vd")]
unique_name_in_owner = true

[node name="HeartRespawnTimer" type="Timer" parent="."]
wait_time = 20.0

[connection signal="timeout" from="HeartRespawnTimer" to="." method="_on_heart_respawn_timer_timeout"]
